<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KIPP</string>
    <string name="action_settings">Settings</string>
    <string name="username_label">username</string>
    <string name="password_label">password</string>
    <string name="login_btn_label">login</string>
    <string name="default_behavior_name">Behavior Name</string>
    <string name="default_student_name">Student Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Logout</string>
    <string name="past_label">ago</string>
    <string name="title_add_action">Actions</string>
    <string name="default_action_type_name">Action Name</string>
    <string name="choose_email_client">Choose an email app</string>
    <string name="salutation">Dear</string>
    <string name="default_timestamp">5h 33m 7s</string>
    <string name="behavior_feed_title">Behavior Feed</string>
    <string name="action_feed_title">Action Log</string>
    <string name="title_activity_roster">RosterActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="good_behaviors_label">GOOD</string>
    <string name="poor_behaviors_label">POOR</string>
    <string name="roster_tab_title">Students</string>
    <string name="leaderboard_tab_title">Leaderboard</string>
    <string name="default_rank">2</string>
    <string name="string_default_points">405 points</string>
    <string name="default_recommendation">John deserves a hand!</string>

    <string name="is_rebound_enabled_tag_key">isReboundEnabledTagKey</string>


    <!-- NavDrawer Menu items -->
    <string name="navdrawer_item_class">Class</string>
    <string name="navdrawer_item_stats">Stats</string>
    <string name="navdrawer_item_logs">Logs</string>
    <string name="navdrawer_item_rank">Rank</string>

    <string name="placeholder_drawer_item">Drawer Item</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
</resources>
