<?xml version="1.0" encoding="utf-8"?>

<!-- Inspiration http://www.android-app-patterns.com/img/sets/lists/streamzoo-list-2.png -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvRank"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:background="@drawable/leaderboard_rank"
        android:text="@string/default_rank"
        android:textColor="@color/White"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerInside"
        android:src="@drawable/img_leo"
        android:layout_toRightOf="@id/tvRank"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
    />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ivProfilePic"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/default_student_name"
            />

        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/tvName"
            android:layout_below="@id/tvName"
            android:textColor="@color/BattleshipGray"
            android:layout_alignLeft="@id/tvName"
            android:text="@string/string_default_points"
            />
    </RelativeLayout>
</RelativeLayout>